# NBT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/NBLib/: NbtHelper.hpp  NbtStream.hpp  NbtType.hpp
include/NBLib/exceptions/: InvalidNbtFile.hpp  UnknwonTagEncountered.hpp
samples/compound_wrapper/: CMakeLists.txt  main.cpp
samples/endian_switch/: CMakeLists.txt  main.cpp
samples/reading/: CMakeLists.txt  main.cpp
samples/writing/: CMakeLists.txt  main.cpp
src/: NbtHelper.cpp  NbtStream.cpp
